--- a/static/css/app.css
+++ b/static/css/app.css
@@ -7,6 +7,10 @@ body {
       sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 code {
