highlight current room on map

--- a/static/css/gaming_board.css
+++ b/static/css/gaming_board.css
@@ -14,7 +14,7 @@
     height: 80vh;
     width: 80vw;
     box-sizing: border-box;
-    /* border: 2px green solid; */
+    border: 2px green solid;
 }
 
 .board_Narration {
@@ -24,7 +24,7 @@
     height: 20vh;
     width: 80vw;
     box-sizing: border-box;
-    /* border: 2px green solid; */
+    border: 2px green solid;
 }
 
 .board_Inventory {
@@ -34,7 +34,7 @@
     height: 80vh;
     width: 20vw;
     box-sizing: border-box;
-    /* border: 2px blue solid; */
+    border: 2px blue solid;
 }
 
 .board_Map {
@@ -44,5 +44,5 @@
     height: 18vh;
     width: 18vw;
     box-sizing: border-box;
-    /* border: 2px blue solid; */
+    border: 2px blue solid;
 }
